2009-05-14	Mike Massonnet
=== Release 1.0.1 ===

2009-05-14	Mike Massonnet
Ask the user if the clipboard manager should be restarted

	- panel-plugin/main.c(update_autostart_file):
		New function to set the Hidden key to true or false.
	- panel-plugin/main.c(cb_status_icon_quit):
		Ask the user if the manager should be restarted.

2009-04-26	Mike Massonnet
Rename "Add selections" to "Sync selections"

	- panel-plugin/settings-dialog.glade:
		Rename the option Add selections.

2009-04-25	Mike Massonnet
Make strings in authors about dialog translatable

	- panel-plugin/main.c(plugin_about):
		Don't declare static strings cause gettext isn't usable this
		way.

2009-04-24	Mike Massonnet
Proper block/unblock menu functions and fix locale bug

	- panel-plugin/main.c:
		Add new functions plugin_block_menu/unblock_menu to block the
		popup menu of the status icon in a proper way.
	- panel-plugin/main.c(plugin_about):
		Drop the macro XFCE_LICENSE_GPL in favor of a static text.
		Fixes bug #5285.

2009-04-24	Mike Massonnet
Fix dummy warning

2009-04-23	Mike Massonnet
Use stock item for the main icon

	- panel-plugin/main.c(cb_status_icon_set_size),
	panel-plugin/main.c(panel_plugin_set_size):
		Use stock icon paste to fit the user icon theme.

2009-04-23	Mike Massonnet
Yet another GMarkup fix

2009-04-22	Mike Massonnet
Update documentation

2009-04-22	Mike Massonnet
New option to exclude selections from the history

	- panel-plugin/settings-dialog.glade:
		Move option "Add selections" to new frame "Behavior" and add a
		new option that allows to exclude the selections from the
		history.
	- panel-plugin/collector.c:
		Install a new property history-ignore-primary-clipboard use it
		inside cb_check_primary_clipboard() to prevent a selection
		from going into the history.
	- panel-plugin/main.c:
		Bind new property to xfconf and the settings dialog.
	- panel-plugin/common.h:
		New default setting for history-ignore-primary-clipboard.

2009-04-21	Mike Massonnet